--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Simple Convertor</string>
     <string name="base_converter_title">Base Converter</string>
     <string name="binary_label">Binary: %1$s</string>
+    <string name="signedbinary_label">Signed Binary: %1$s</string>
     <string name="decimal_label">Decimal: %1$s</string>
     <string name="octal_label">Octal: %1$s</string>
     <string name="hexadecimal_label">Hexadecimal: %1$s</string>
